--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "babel-polyfill": "^6.26.0",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.2.0",
-    "vue": "^2.5.2"
+    "path": "^0.12.7",
+    "vue": "^2.5.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -46,8 +47,8 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
+    "vue-template-compiler": "^2.5.15",
+    "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
