--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^3.3.0",
+    "bootstrap-select": "^1.12.4",
     "jquery": "^1.12.4",
     "jsonwebtoken": "^8.2.0",
+    "npm-bootstrap": "^1.1.3",
     "path": "^0.12.7",
     "vue": "^2.5.15"
   },
